<resources>
    <string name="app_name">Trivia App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="hintETNameFragment">What\'s your good name?</string>
    <string name="back">Back</string>
    <string name="questionCricketFragment">Who is the best cricketer in the world?</string>
    <string name="questionFlagFragment">What are the colors in the national flag?</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kohli">virat kohli</string>
    <string name="adam_gilchirst">Adam Gilchirst</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="finish">FINISH</string>
    <string name="summary">SUMMARY</string>
    <string name="txtNameSummary">Hello %s,</string>
    <string name="txtAnswerQ1Summary">Answer: %s</string>
    <string name="txtAnswerQ2Summary">Answers : %s</string>
    <string name="answers_selected">Here are the answers selected:</string>
    <string name="txt1History">GAME %d : %s</string>
    <string name="txt2History">Name : %s</string>
    <string name="txt4History">Answer : %s</string>
    <string name="txt6History">Answers : %s</string>
    <string name="history_icon">history icon</string>
    <string name="no_history_found">No History Found</string>
</resources>
