<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CricketFragment">

    <TextView
        android:id="@+id/txtQuestionCriFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/questionCricketFragment"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/radioGroupCriFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupCriFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sachin_tendulkar" />

        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virat_kohli" />

        <RadioButton
            android:id="@+id/rdb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adam_gilchirst" />

        <RadioButton
            android:id="@+id/rdb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jacques_kallis" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>