<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="pref"
            type="com.parthdesai1208.triviaapp.utils.PreferenceProvider" />

        <variable
            name="click"
            type="com.parthdesai1208.triviaapp.view.fragment.SummaryFragment" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.fragment.SummaryFragment">

            <TextView
                android:id="@+id/txtSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/summary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtNameSummary"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtNameSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@{@string/txtNameSummary(pref.name)}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@+id/txtAnswer"
                app:layout_constraintStart_toStartOf="@id/txtSummary" />

            <TextView
                android:id="@+id/txtAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/answers_selected"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@+id/txtq1Summary"
                app:layout_constraintStart_toStartOf="@+id/txtNameSummary" />

            <TextView
                android:id="@+id/txtq1Summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/questionCricketFragment"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtAnswerQ1Summary"
                app:layout_constraintStart_toStartOf="@+id/txtAnswer" />

            <TextView
                android:id="@+id/txtAnswerQ1Summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@{@string/txtAnswerQ1Summary(pref.cricketer)}"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/txtq2Summary"
                app:layout_constraintStart_toStartOf="@+id/txtq1Summary" />

            <TextView
                android:id="@+id/txtq2Summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/questionFlagFragment"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtAnswerQ1Summary"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAnswerQ2Summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/txtAnswerQ2Summary(pref.flagColor)}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/txtq2Summary"
                app:layout_constraintTop_toBottomOf="@+id/txtq2Summary" />

            <ImageView
                android:id="@+id/imgHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/history_icon"
                android:onClick="@{()->click.onImgHistoryClick()}"
                android:src="@drawable/ic_history_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>